# AIChat

./: .gitignore  CLAUDE.md  LICENSE  README.md  ai-chat-dir.spec  ai-chat.spec  pyproject.toml
.claude/: settings.json
ai_chat_cli/: __init__.py  __main__.py  main.py
ai_chat_cli/cli/: __init__.py  commands.py  display.py
ai_chat_cli/config/: app.yaml  prompts.yaml  rag.yaml  tools.yaml
ai_chat_cli/core/: __init__.py
ai_chat_cli/core/base/: __init__.py  logger.py  models.py  services.py  settings.py
ai_chat_cli/core/chat/: __init__.py  chat_client.py  chat_config.py  chat_history.py  chat_session.py  request_sender.py  streaming.py  token_tracker.py  tool_executor.py
ai_chat_cli/rag/: __init__.py  document_loader.py  hybrid_searcher.py  rag_manager.py  sparse_store.py  text_splitter.py  vector_store.py
ai_chat_cli/tools/: __init__.py  tool_base.py  tool_manager.py
ai_chat_cli/tools/builtin/: __init__.py  code_executor.py  file_rw.py  get_current_time.py  knowledge_search.py  knowledge_store.py  web_search.py
docs/: ARCHITECTURE.md  CONVENTIONS.md  ISSUES.md  SECURITY.md  架构分析与建议.md
