[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-chat-cli"
version = "0.1.0"
description = "支持多模型的多轮对话命令行应用，支持流式输出、思考过程展示、工具调用等特性"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "zhangyipeng", email = "272517269@qq.com"},
]
keywords = ["ai", "chat", "cli", "openai", "kimi", "function-calling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "duckduckgo-search>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/z252517/AIChat"
Repository = "https://github.com/z252517/AIChat"
Issues = "https://github.com/z252517/AIChat/issues"

[project.optional-dependencies]
rag = [
    "chromadb>=0.4.0",
    "PyMuPDF>=1.23.0",
]
rag-hybrid = [
    "chromadb>=0.4.0",
    "PyMuPDF>=1.23.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.0",
]

[project.scripts]
ai-chat = "ai_chat_cli.main:main"

[tool.setuptools.packages.find]
include = ["ai_chat_cli*"]

[tool.setuptools.package-data]
ai_chat_cli = ["config/*.yaml"]
